--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,7 @@ button {
   font-family: inherit;
   font-weight: inherit;
   color: inherit;
+  outline: none;
   -webkit-appearance: none;
   appearance: none;
   -webkit-font-smoothing: antialiased;
